--- a/index.css
+++ b/index.css
@@ -1,7 +1,5 @@
 /*
-
     BASSCSS Utilities
-
  */
 
 
@@ -21,13 +19,12 @@
 .left  { float: left }
 .right { float: right }
 
-.clearfix {
-  &:before, &:after {
-    content: " ";
-    display: table
-  }
-  &:after { clear: both }
+.clearfix:before,
+.clearfix:after {
+  content: " ";
+  display: table
 }
+.clearfix:after { clear: both }
 
 .fit { max-width: 100% }
 
