--- a/index.css
+++ b/index.css
@@ -3,6 +3,10 @@
  */
 
 
+@custom-media: --breakpoint-sm (min-width: 40em);
+@custom-media: --breakpoint-md (min-width: 52em);
+@custom-media: --breakpoint-lg (min-width: 64em);
+
 :root {
   --space-1: .5em;
   --space-2: 1em;
@@ -11,97 +15,13 @@
 }
 
 
-.inline       { display: inline }
-.block        { display: block }
-.inline-block { display: inline-block }
-
-.overflow-hidden { overflow: hidden }
-.left  { float: left }
-.right { float: right }
-
-.clearfix:before,
-.clearfix:after {
-  content: " ";
-  display: table
-}
-.clearfix:after { clear: both }
-
-.fit { max-width: 100% }
-
-
-/* Typography */
-
-.bold    { font-weight: bold }
-.regular { font-weight: normal }
-.medium  { font-weight: 500 }
-.italic  { font-style: italic }
-.caps    { text-transform: uppercase; letter-spacing: .2em; }
-
-.left-align   { text-align: left }
-.center       { text-align: center }
-.right-align  { text-align: right }
-.justified    { text-align: justify }
-
-.nowrap { white-space: nowrap }
-
-
-/* Margins */
-
-.m0  { margin:        0 }
-.mt0 { margin-top:    0 }
-.mr0 { margin-right:  0 }
-.mb0 { margin-bottom: 0 }
-.ml0 { margin-left:   0 }
-
-.m1  { margin:        var(--space-1) }
-.mt1 { margin-top:    var(--space-1) }
-.mr1 { margin-right:  var(--space-1) }
-.mb1 { margin-bottom: var(--space-1) }
-.ml1 { margin-left:   var(--space-1) }
-
-.m2  { margin:        var(--space-2) }
-.mt2 { margin-top:    var(--space-2) }
-.mr2 { margin-right:  var(--space-2) }
-.mb2 { margin-bottom: var(--space-2) }
-.ml2 { margin-left:   var(--space-2) }
-
-.m3  { margin:        var(--space-3) }
-.mt3 { margin-top:    var(--space-3) }
-.mr3 { margin-right:  var(--space-3) }
-.mb3 { margin-bottom: var(--space-3) }
-.ml3 { margin-left:   var(--space-3) }
-
-.m4  { margin:        var(--space-4) }
-.mt4 { margin-top:    var(--space-4) }
-.mr4 { margin-right:  var(--space-4) }
-.mb4 { margin-bottom: var(--space-4) }
-.ml4 { margin-left:   var(--space-4) }
-
-
-/* Negative x-axis margins */
-
-.mxn1 { margin-left: -var(--space-1); margin-right: -var(--space-1); }
-.mxn2 { margin-left: -var(--space-2); margin-right: -var(--space-2); }
-.mxn3 { margin-left: -var(--space-3); margin-right: -var(--space-3); }
-.mxn4 { margin-left: -var(--space-4); margin-right: -var(--space-4); }
-
-
-/* Padding */
-
-.p1  { padding:       var(--space-1) }
-.py1 { padding-top:   var(--space-1); padding-bottom: var(--space-1) }
-.px1 { padding-left:  var(--space-1); padding-right:  var(--space-1) }
-
-.p2  { padding:       var(--space-2) }
-.py2 { padding-top:   var(--space-2); padding-bottom: var(--space-2) }
-.px2 { padding-left:  var(--space-2); padding-right:  var(--space-2) }
-
-.p3  { padding:       var(--space-3) }
-.py3 { padding-top:   var(--space-3); padding-bottom: var(--space-3) }
-.px3 { padding-left:  var(--space-3); padding-right:  var(--space-3) }
-
-.p4  { padding:       var(--space-4) }
-.py4 { padding-top:   var(--space-4); padding-bottom: var(--space-4) }
-.px4 { padding-left:  var(--space-4); padding-right:  var(--space-4) }
+@import "./lib/layout.css";
+@import "./lib/floats.css";
+@import "./lib/sm-floats.css";
+@import "./lib/md-floats.css";
+@import "./lib/lg-floats.css";
+@import "./lib/typography.css";
+@import "./lib/margins.css";
+@import "./lib/padding.css";
 
 
