--- a/index.css
+++ b/index.css
@@ -7,6 +7,10 @@
   --space-4: 4em;
 }
 
+@custom-media --breakpoint-sm (min-width: 40em);
+@custom-media --breakpoint-md (min-width: 52em);
+@custom-media --breakpoint-lg (min-width: 64em);
+
 @import "./lib/layout.css";
 @import "./lib/floats.css";
 @import "./lib/sm-floats.css";
