--- a/index.css
+++ b/index.css
@@ -19,5 +19,6 @@
 @import "./lib/typography.css";
 @import "./lib/margins.css";
 @import "./lib/padding.css";
+@import "./lib/responsive-states.css";
 
 
