Remove breakpoint float utilities

--- a/lib/layout.css
+++ b/lib/layout.css
@@ -12,6 +12,9 @@
 }
 .clearfix:after { clear: both }
 
+.left  { float: left }
+.right { float: right }
+
 .fit { max-width: 100% }
 
 .half-width { width: 50% }
