--- a/index.css
+++ b/index.css
@@ -1,5 +1,9 @@
 /* BASSCSS Utilities */
 
+@custom-media --breakpoint-sm (min-width: 40em);
+@custom-media --breakpoint-md (min-width: 52em);
+@custom-media --breakpoint-lg (min-width: 64em);
+
 :root {
   --space-1: .5rem;
   --space-2: 1rem;
