--- a/lib/typography.css
+++ b/lib/typography.css
@@ -7,7 +7,7 @@
 .left-align   { text-align: left }
 .center       { text-align: center }
 .right-align  { text-align: right }
-.justified    { text-align: justify }
+.justify      { text-align: justify }
 
 .nowrap { white-space: nowrap }
 
