Accessible hide style

--- a/lib/responsive-states.css
+++ b/lib/responsive-states.css
@@ -15,7 +15,6 @@
   .lg-show { display: block !important }
 }
 
-.hide { display: none !important }
 
 @media (--breakpoint-sm) {
   .sm-hide { display: none !important }
@@ -29,4 +28,13 @@
   .lg-hide { display: none !important }
 }
 
+.display-none { display: none !important }
+
+.hide {
+  position: absolute !important;
+  height: 1px;
+  width: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
+}
 
