--- a/lib/layout.css
+++ b/lib/layout.css
@@ -5,6 +5,7 @@
 
 .overflow-hidden { overflow: hidden }
 .overflow-scroll { overflow: scroll }
+.overflow-auto   { overflow: auto }
 
 .clearfix:before,
 .clearfix:after {
